# AI_Challenge-Redrob-India_Runs_Hackathon

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  rank.py  requirements.txt  submission_metadata.yaml
.github/workflows/: ci.yml
app/: streamlit_app.py
configs/: jd_spec.yaml  weights.yaml
docs/: METHODOLOGY.md
eval/: ablations.md  eda_report.md  ltr_report.md  metrics.json  template_grades.json  templates_description.jsonl  templates_summary.jsonl
oracle/: grade_offline.py
redrob_ranker/: data.py  eda.py  evaluate.py  features.py  integrity.py  jd_spec.py  ltr.py  oracle.py  pipeline.py  reasoning.py  scoring.py  text.py  timeline.py
scripts/: build_fixture.py  extract_templates.py  grade_templates.py  run_ablations.py  train_ltr.py
tests/: test_anchors.py  test_data.py  test_features.py  test_fixture.py  test_integrity.py  test_jd_spec.py  test_metrics.py  test_oracle.py  test_output.py  test_smoke.py
tests/fixtures/: sample_candidates.jsonl
