[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redrob-ranker"
version = "0.1.0"
description = "Candidate ranking for the Redrob intelligent discovery challenge"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Parth Biyani", email = "parthbiyani9@gmail.com" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "pyarrow>=14",
    "pyyaml>=6",
]

[project.optional-dependencies]
precompute = [
    "torch>=2.2",
    "sentence-transformers>=2.7",
    "faiss-cpu>=1.8",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "anthropic>=0.34",
]
app = ["streamlit>=1.36"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["redrob_ranker*"]

[tool.ruff]
line-length = 100
target-version = "py310"
